alignment fix

--- a/src/app/show-info/show-info.component.css
+++ b/src/app/show-info/show-info.component.css
@@ -1,22 +1,23 @@
-.container {
-  max-width: calc(100% - 90px);
+
+
+.info-container {
+  width: 100%;
   flex: 1 1 auto;
-  margin: 0 45px;
-  padding: 0;
-  display: flex;
+  margin-left: 25px;
+     display: flex;
   flex-wrap: wrap;
 }
 
 .mat-card-title {
-  color: rgba(0, 0, 0, 0.87);
-  font-size: 25px;
-  margin-bottom: 15px;
-  padding-bottom: 10px;
+  color: rgba(0,0,0,.87);
+  font-size:25px;
+  margin-bottom:15px;
+  padding-bottom:10px;
 }
 
-.mat-card-subtitle {
+.mat-card-subtitle{
   padding-top: 5px;
-  font-size: 20px;
+  font-size:20px;
 }
 
 .showlist {
@@ -50,6 +51,7 @@ span {
 
 /********** Large devices only **********/
 @media (min-width: 992px) {
+
   .col-lg-1 {
     width: 6.33%;
   }
@@ -90,6 +92,7 @@ span {
 
 /********** Medium devices only **********/
 @media (min-width: 768px) and (max-width: 991px) {
+
   .col-md-1 {
     width: 6.33%;
   }
@@ -128,8 +131,10 @@ span {
   }
 }
 
+
 /********** Small devices only **********/
 @media (min-width: 481px) and (max-width: 767px) {
+
   .col-sm-1 {
     width: 6.33%;
   }
@@ -168,8 +173,9 @@ span {
   }
 }
 
-/********** x-Small devices only **********/
-@media (max-width: 480px) {
+  /********** x-Small devices only **********/
+@media (min-width: 376px) and  (max-width: 480px) {
+
   .col-xs-1 {
     width: 6.33%;
   }
